Add credentials in settings via secrets

--- a/secrets.json.template
+++ b/secrets.json.template
@@ -1,6 +1,6 @@
 {
-    "consumer_key": "<consumer_key_here>", 
-    "consumer_secret": "<consumer_secret_here>",
-    "access_token_key": "<access_token_key_here>",
-    "access_token_secret": "<access_token_secret_here>"
+    "TWITTER_CONSUMER_KEY": "<consumer_key_here>", 
+    "TWITTER_CONSUMER_SECRET": "<consumer_secret_here>",
+    "TWITTER_ACCESS_TOKEN_KEY": "<access_token_key_here>",
+    "TWITTER_ACCESS_TOKEN_SECRET": "<access_token_secret_here>"
 }
